Fix spacing on manage page table

--- a/frontend/src/styles/UserList.css
+++ b/frontend/src/styles/UserList.css
@@ -64,7 +64,7 @@
   text-align: left;
 }
 .table-container td {
-  padding-left: 30px;
+  padding-left: 60px;
 }
 .end {
   width: 20%;
